Fix width of image on mobiles

--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ footer p {
     }
 
     .sexy-side-picture-container {
-        width: 100%;
+        width: 50%;
         max-width: 400px;
         padding: 0;
         margin-bottom: 4.5rem;
